# Screwceus

./: README.md
backend/: .env.example  README.md  databse.db  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/app/: main.py
backend/app/api/: routes.py
backend/app/api/v1/: photos.py
backend/app/core/: config.py  security.py
backend/app/db/: base.py
backend/app/models/: photo.py
backend/app/schemas/: photo.py
backend/app/services/: r2.py
backend/core/: config.py
backend/db/: database.py
backend/models/: project.py  project_screw.py
backend/routers/: project.py  screws.py
backend/schemas/: project.py
frontend/: .env.example  package-lock.json  package.json  pnpm-lock.yaml
frontend/src/: App.jsx  App.tsx  home.tsx  index.css  main.jsx
frontend/src/assets/models/: README.md
frontend/src/components/: AnnotationCanvas.jsx  ModelCanvas.jsx
frontend/src/components/home/: HomeIcons.jsx  HomeSidebar.jsx  HomeTopNav.jsx
frontend/src/components/project/: ProjectMiniNav.jsx
frontend/src/lib/: api.js  projectRouting.js
frontend/src/pages/: EditorPage.jsx  HomePage.jsx  NewEntryPage.jsx  NotFoundPage.jsx  ProjectAssemblePage.jsx  ProjectIssueLogPage.jsx  ProjectOverviewPage.jsx  ProjectPage.jsx
frontend/src/store/: useAppStore.js
